--- a/Utilities/SequenceFileReader/pom.xml
+++ b/Utilities/SequenceFileReader/pom.xml
@@ -28,22 +28,29 @@
 		</repository>
 	</repositories>
 	<dependencies>
-
 		<dependency>
-			<groupId>org.apache.mahout</groupId>
-			<artifactId>mahout-math</artifactId>
-			<version>${mahout.version}</version>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-mapreduce-client-core</artifactId>
+			<version>${hadoop.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.mahout</groupId>
-			<artifactId>mahout-mr</artifactId>
-			<version>${mahout.version}</version>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-common</artifactId>
+			<version>${hadoop.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.mahout</groupId>
-			<artifactId>mahout-examples</artifactId>
-			<version>${mahout.version}</version>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-hdfs</artifactId>
+			<version>${hadoop.version}</version>
+			<scope>provided</scope>
 		</dependency>
+		<!-- <dependency> <groupId>org.apache.mahout</groupId> <artifactId>mahout-math</artifactId> 
+			<version>${mahout.version}</version> </dependency> <dependency> <groupId>org.apache.mahout</groupId> 
+			<artifactId>mahout-mr</artifactId> <version>${mahout.version}</version> </dependency> 
+			<dependency> <groupId>org.apache.mahout</groupId> <artifactId>mahout-examples</artifactId> 
+			<version>${mahout.version}</version> </dependency> -->
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
