--- a/Utilities/SequenceFileReader/pom.xml
+++ b/Utilities/SequenceFileReader/pom.xml
@@ -46,11 +46,21 @@
 			<version>${hadoop.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- <dependency> <groupId>org.apache.mahout</groupId> <artifactId>mahout-math</artifactId> 
-			<version>${mahout.version}</version> </dependency> <dependency> <groupId>org.apache.mahout</groupId> 
-			<artifactId>mahout-mr</artifactId> <version>${mahout.version}</version> </dependency> 
-			<dependency> <groupId>org.apache.mahout</groupId> <artifactId>mahout-examples</artifactId> 
-			<version>${mahout.version}</version> </dependency> -->
+		<dependency>
+			<groupId>org.apache.mahout</groupId>
+			<artifactId>mahout-math</artifactId>
+			<version>${mahout.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.mahout</groupId>
+			<artifactId>mahout-mr</artifactId>
+			<version>${mahout.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.mahout</groupId>
+			<artifactId>mahout-examples</artifactId>
+			<version>${mahout.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
